# leave-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEV.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_half_day_constraints.py  0003_proxy_approver.py  0004_departments.py  0005_multi_proxy.py
app/: auth.py  config.py  main.py  mattermost.py  ui.py
app/db/: models.py  session.py
app/routers/: admin.py  interactive.py  slash.py
app/services/: departments.py  leave.py  users.py
app/templates/: base.html
app/templates/admin/: add_user.html  department_edit.html  departments.html  request_detail.html  requests.html  user_edit.html  users.html
scripts/: dev_apply.sh  dev_init_postgres.sh  dev_init_postgres.sql  init_db.sql  seed_dev.py
tests/: conftest.py  test_api.py  test_leave_service.py
